Convert compiler based tests to use an in-memory file manager.